--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -23,7 +23,9 @@
             style="-fx-background-color: D9D9D9;"
             stylesheets="@../CSS/dashboard.css"
             xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1">
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ui.controllers.DashboardController"
+            fx:id="rootPane">
 
     <!-- Main Content -->
     <center>
@@ -67,7 +69,7 @@
                                     <Circle fill="green" radius="5" />
                                 </HBox>
                                 <HBox alignment="BOTTOM_RIGHT">
-                                    <Button prefHeight="7.0" prefWidth="93.0" styleClass="small-btn" text="Đổi Mật Khẩu" />
+                                    <Button fx:id="btnChangePass" onAction="#showChangePassword" prefHeight="7.0" prefWidth="93.0" styleClass="small-btn" text="Đổi Mật Khẩu" />
                                 </HBox>
                             </VBox>
                         </children>
