--- a/src/main/resources/FXML/ChinhSach.fxml
+++ b/src/main/resources/FXML/ChinhSach.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/chinhsach.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.chinhSachController">
+<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/chinhsach.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.ChinhSachController">
 
 
     <!-- Main content -->
